// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LeaderboardTable > renders snapshot confirming memo wrapper prevents unnecessary renders > LeaderboardTable-memo-optimized 1`] = `
<div>
  <div
    class="rounded-none max-w-2xl mx-auto"
  >
    <table
      class="w-full rounded-none border-l border-[#808080] dark:border-slate-700 border-collapse"
    >
      <thead>
        <tr
          class="bg-gradient-to-b from-[#3737A4] to-[#0C0C4F] text-white"
        >
          <th
            class="px-4 py-2 text-center border border-r-2 border-white"
          >
            Position
          </th>
          <th
            class="px-4 py-2 text-left border border-r-2 border-white"
          >
            Display Name / Wallet Address
          </th>
          <th
            class="px-4 py-2 text-center"
          >
            Points Won
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2 "
          >
            <span>
              <div>
                Medal 1
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              1
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            Test Player
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            200
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LeaderboardTable > renders snapshot of empty state 1`] = `
<div>
  <div
    class="max-w-2xl mx-auto p-12 text-center bg-white dark:bg-slate-900 rounded-xl border border-dashed border-slate-300 dark:border-slate-700"
  >
    <p
      class="text-slate-500 dark:text-slate-400 font-medium"
    >
      No players on the leaderboard yet. Be the first!
    </p>
  </div>
</div>
`;

exports[`LeaderboardTable > renders snapshot of loading state 1`] = `
<div>
  <div
    class="rounded-none max-w-2xl mx-auto"
  >
    <table
      class="w-full rounded-none border-l border-[#808080] dark:border-slate-700 border-collapse"
    >
      <thead>
        <tr
          class="bg-gradient-to-b from-[#3737A4] to-[#0C0C4F] text-white"
        >
          <th
            class="px-4 py-2 text-center border border-r-2 border-white"
          >
            Position
          </th>
          <th
            class="px-4 py-2 text-left border border-r-2 border-white"
          >
            Display Name / Wallet Address
          </th>
          <th
            class="px-4 py-2 text-center"
          >
            Points Won
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="px-4 py-3 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse w-6 h-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse rounded-md w-4 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse rounded-md w-1/2 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 text-center border border-b-2 border-[#808080] dark:border-slate-700"
          >
            <div
              class="animate-pulse rounded-md w-8 h-5 mx-auto bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="px-4 py-3 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse w-6 h-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse rounded-md w-4 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse rounded-md w-1/2 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 text-center border border-b-2 border-[#808080] dark:border-slate-700"
          >
            <div
              class="animate-pulse rounded-md w-8 h-5 mx-auto bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="px-4 py-3 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse w-6 h-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse rounded-md w-4 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse rounded-md w-1/2 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 text-center border border-b-2 border-[#808080] dark:border-slate-700"
          >
            <div
              class="animate-pulse rounded-md w-8 h-5 mx-auto bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="px-4 py-3 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse w-6 h-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse rounded-md w-4 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse rounded-md w-1/2 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 text-center border border-b-2 border-[#808080] dark:border-slate-700"
          >
            <div
              class="animate-pulse rounded-md w-8 h-5 mx-auto bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
        <tr
          class="bg-white dark:bg-slate-900"
        >
          <td
            class="px-4 py-3 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse w-6 h-6 rounded-full bg-slate-200 dark:bg-slate-800"
            />
            <div
              class="animate-pulse rounded-md w-4 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 border-r-2 border-[#808080] dark:border-slate-700 border-b-2"
          >
            <div
              class="animate-pulse rounded-md w-1/2 h-5 bg-slate-200 dark:bg-slate-800"
            />
          </td>
          <td
            class="px-4 py-3 text-center border border-b-2 border-[#808080] dark:border-slate-700"
          >
            <div
              class="animate-pulse rounded-md w-8 h-5 mx-auto bg-slate-200 dark:bg-slate-800"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`LeaderboardTable > renders snapshot of table with data 1`] = `
<div>
  <div
    class="rounded-none max-w-2xl mx-auto"
  >
    <table
      class="w-full rounded-none border-l border-[#808080] dark:border-slate-700 border-collapse"
    >
      <thead>
        <tr
          class="bg-gradient-to-b from-[#3737A4] to-[#0C0C4F] text-white"
        >
          <th
            class="px-4 py-2 text-center border border-r-2 border-white"
          >
            Position
          </th>
          <th
            class="px-4 py-2 text-left border border-r-2 border-white"
          >
            Display Name / Wallet Address
          </th>
          <th
            class="px-4 py-2 text-center"
          >
            Points Won
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2 "
          >
            <span>
              <div
                data-testid="medal-1"
              >
                🥇
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              1
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            Champion
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            150
          </td>
        </tr>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2 "
          >
            <span>
              <div
                data-testid="medal-2"
              >
                🥈
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              2
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            Runner Up
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            120
          </td>
        </tr>
        <tr
          class="bg-slate-50 dark:bg-blue-900/10 font-bold"
        >
          <td
            class="px-4 py-2 flex items-center justify-center gap-2 text-center border-r-2 border-[#808080] dark:border-slate-700 border-b-2 "
          >
            <span>
              <div
                data-testid="medal-3"
              >
                🥉
              </div>
            </span>
            <span
              class="text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
            >
              3
            </span>
          </td>
          <td
            class="px-4 py-2 border-r-2 border-[#808080] dark:border-slate-700 border-b-2 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            Third
          </td>
          <td
            class="px-4 py-2 text-center border border-b-2 border-[#808080] dark:border-slate-700 text-[16px] bg-gradient-to-b from-[#576065] to-[#787884] dark:from-slate-200 dark:to-slate-400 bg-clip-text text-transparent"
          >
            100
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
